# SolarCoolTool

./: .gitignore  LICENSE.txt  README.en.md  README.md  README.ru.md  SolarCoolTool.sln  SolarToolWindow.py  app.spec  bezierEditor.py  compile.ps1  configuration.py  configuration.txt  curve.py  curveEditor.py  dda.py  exporter.py  images_indexer.py  install.ps1  mask_exporter.py  my_database.db  preparation.py  reading  requirements.txt  result.py  result_exporter.py  setup.cfg  setup.py  solar_tool_window.py  test.py  test.ui  testUI.py  transformations.py  tree.txt
Controllers/: bezier_mask_controller.py  channelSwitchController.py  channel_switch_controller.py  curveAreaController.py  curveEditorController.py  curve_editor_controller.py  mask_spline_controller.py  selected_preview_mode_controller.py  solarViewerController.py  solar_viewer_controller.py  timeLineController.py  time_distance_plot_controller.py  time_distance_plot_debug_controller.py  time_line_controller.py
CustomWidgets/: bezier_mask_widget.py  channelSwitchWidget.py  channel_switch_widget.py  color.py  curveAreaWidget.py  curvePointWidget.py  curve_area_widget.py  curve_point_widget.py  mask_spline_points_widget.py  solarViewerWidget.py  solar_viewer_widget.py  timeLineWidget.py  time_distance_plot_widget.py  time_line_widget.py
IOSolarData/: imagesStorage.py
Images/: aia.lev1_euv_12s.2012-07-25T133008Z.193.spikes.fits  aia.lev1_euv_12s.2012-07-25T133020Z.193.spikes.fits  aia.lev1_euv_12s.2012-07-25T133032Z.193.spikes.fits  aia.lev1_euv_12s.2012-07-25T133044Z.193.spikes.fits  (+1 more)
Models/: curve.py  (+8 more)
(+99 files in other folders)
