[metadata]
name = TimeDistancePlotBuilder
version = 0.6.0
author = Kobzarev Danil
author_email = kobzarev.dani@gmail.com
description = GUI Application for build time distance plot from FITS files.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/KobzarevFizDev/SolarCoolTool
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent